--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>CareCoord</h1>
-        <p>Efficient. Reliable. Comprehensive.</p>
+        <p>Empowering healthcare one click at a time.</p>
     </header>
 
     <nav>
@@ -63,8 +63,8 @@
     <footer id="contact">
         <h2>Contact Us</h2>
         <p>Company: Dibe Innovations</p>
-        <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-        <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
+        <p>Email: <a href="mailto: diamondbelema78@gmail.com">diamondbelema@gmail.com</a></p>
+        <p>Phone: <a href="tel:+2347064514610">+2347064514610</a></p>
     </footer>
     <script src="scripts.js"></script>
 </body>
